--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ name = "pypi"
 [packages]
 django = "~=2.1.0"
 "psycopg2-binary" = "*"
+djangorestframework = "~=3.9.0"
 
 [dev-packages]
 ipython = "*"
