--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,10 @@ name = "pypi"
 django = "~=2.1.0"
 "psycopg2-binary" = "*"
 djangorestframework = "~=3.9.0"
+pytest = "~=3.9.2"
+pytest-django = "~=3.4.3"
+pytest-cov = "~=2.6.0"
+mixer = "~=6.1.3"
 
 [dev-packages]
 ipython = "*"
